# IGV-Pipeline

./: .dockerignore  .gitignore  MANIFEST.in  README.md  README.zh-CN.md  main.nf  nextflow.config  nextflow_schema.json  pyproject.toml
.github/workflows/: ci.yml  pilot-candidate.yml  release.yml
conf/: base.config  docker.config  scc.config  standalone.config  test.config
config/: bu-scc-site.example.json
containers/: fonts-local.conf  helper-lock-spec.json  helpers.def  materials.lock.json  runtime-debug-materials.lock.json  runtime-debug-policy.json  runtime-debug.Dockerfile  runtime-debug.Dockerfile.dockerignore  runtime-manifest.schema.json  runtime-materials.lock.json  runtime-self-test.sh  runtime.Dockerfile
docs/: legacy-v2-user-guide.md  legacy-v2-user-guide.zh-CN.md
docs/architecture/: control-model.md
docs/contracts/: task-schema-v2.md
docs/runtime/: portable-runtime-v3.md  runtime-debug.md
modules/local/: admit_project_tasks.nf  aggregate_shards.nf  build_review_package.nf  collect_qacct.nf  compose_case.nf  create_shards.nf  finalize_cases.nf  normalize_ssqtl_v3.nf  publish_reviewed.nf  qc_case.nf  resolve_execution_policy.nf  resolve_project_entry.nf  run_igv.nf  run_portable_case.nf  summarize_shard.nf  validate_and_normalize.nf  validate_case_inputs.nf  validate_environment.nf  validate_review.nf  validate_runtime_identity.nf
schema/: batch-request-v3.schema.json  campaign-ledger-event-v3.schema.json  campaign-v3.schema.json  case-result-v3.schema.json  case-result.schema.json  execution-policy-v3.schema.json  pilot-selection-v3.schema.json  project-v3.schema.json  review.schema.json  run-provenance.schema.json  shard-ledger.schema.json  stage-result.schema.json  task-v3.schema.json  task.schema.json  terminal-bundle-v3.schema.json
scripts/: 01_stage_runtime.sh  build-helper-sif.sh  build-runtime-debug.sh  build-runtime-oci.sh  collect-qacct.py  convert-oci-to-sif.sh  resolve-helper-locks.py  run-runtime-debug.sh  scc-controller-launcher-v3.sh  submit-bu-scc-pull-run.sh  verify-production-artifact-tree.py  verify-v3-release-tag.py
src/ssqtl_igv/: __init__.py  accounting.py  artifact_admission_v3.py  bundles.py  campaign_v3.py  case_inputs.py  cli.py  compose.py  composition.py  config.py  contracts.py  controller_runtime_v3.py  desktop.py  docker_worker_v3.py  environment.py  evidence_qc.py  evidence_v3.py  execution_policy.py  identity.py  igv.py  migration_v3.py  normalize.py  orchestrator_v3.py  parsing.py  preflight.py  prepare.py  probes_v3.py  project_admission_v3.py  project_launcher.py  project_v3.py  publication.py  publication_v3.py  qacct.py  qc.py  qc_case.py  r_prepare.py  reconcile.py  release_v3.py  render_case.py  rerun_v3.py  (+24 more)
tests/: test_portable_workflow.py  test_synthetic_workflow.py
tests/nextflow/: build_fixture.py  build_project_fixture_v3.py  build_r_fixture.R  build_ssqtl_assets_v3.R  (+5 more)
workflows/: aggregate_run.nf  plan_run.nf  portable_run.nf  project_run.nf  publish_run.nf  run_shard.nf  ssqtl_normalize.nf
(+33 files in other folders)
